--- a/表达式和运算符.md
+++ b/表达式和运算符.md
@@ -197,5 +197,45 @@ true + true // => 2 布尔值转换为数字后做加法
   #### 比较运算符
   > 比较运算符的操作数可能是任意类型。然而，只有数字和字符串才能真正执行比较操作，因此那些不是数字和字符串的操作数都将进行类型转换，转换规则如下：
 
-* 如果操作数是对象，那么这个对象将按照类型转换规则进行转换：如果valueOf返回一个原始值，那么直接使用这个原始值。否则，使用toString的转换结果进行比较操作。
-* 在对象转换为原始值之后
+  * 如果操作数是对象，那么这个对象将按照类型转换规则进行转换：如果valueOf返回一个原始值，那么直接使用这个原始值。否则，使用toString的转换结果进行比 较操作。
+  * 在对象转换为原始值之后，如果两个操作符都是字符串，那么将依照字母表顺序对两个字符串进行比较，这里提到的字母表顺序是指这个字符串的16位Unicode字符的索引顺序。
+  * 在对象转换为原始值之后，如果至少有一个操作数不是字符串，那么两个操作数都将转换为数字进行数值比较。0和-0是相等的。Infinity比其他任何数字都大（除了Infinity本身），Infinity比其他任何数字都小（除了它自身）。如果其中一个操作数是（或转换后是）NaN，那么比较操作符总是返回false。
+  需要注意的是，JavaScript字符串是一个由16位整数值组成的序列，字符串的比较也只是两个字符中的字符的数值比较。由Unicode定义的字符编码顺序和任何特定语言或者本地语言字符集中的传统字符编码顺序不尽相同。注意，字符串比较是区分大小写的，所有的大写的ASCII字母都小于小写的ASCII字母。
+  > 参照String.localCompare()方法来获取更多字符串比较的相关信息，String.localCompare()方法更加健壮可靠，这个方法参照本地语言的字母表定义的字符次序。对于那些不区分字母大小写的比较来说，则需要首先将字符串全部转换为小写字母或者大写字母。
+  > 对于数字和字符串操作符来说，加号运算符和比较运算符的行为都有所不同，前者更偏爱字符串，如果它的其中一个操作数是字符串的话，则进行字符串连接操作。而比较运算则更偏爱数字，只有在两个操作数都是字符串的时候，才会进行字符串的比较：
+```
+1 + 2 // 加法，结果是3
+“1”+“2” // 字符串连接，结果是“12”
+“1”+2 // 字符串连接，2转换为“2”，结果是“12”
+11 < 3 // 数字的比较，结果为false
+“11” < "3" // 字符串比较，结果为true
+“11” < 3 // 数字的比较，“11”转换为11，结果为false
+“one” < 3 // 数字的比较，“one”转换为NaN，结果为false
+```
+  最后，需要注意的是，“<=”和“>=”运算符在判断相等的时候，并不依赖于相等运算符和严格运算符的比较规则。相反，小于等于运算符只是简单的“不大于”，大于等于运算符也只是“不小于”。只有一个例外，那就是当其中一个操作数是（或者转换后是）NaN的时候，所有4个比较运算符均返回false。
+  #### in运算符
+  > in运算符希望它的左操作数是一个字符串或可以转换为字符串，希望它的右操作数是一个对象。如果右侧的对象拥有一个名为左操作数值的属性名，那么表达式返回true。
+```
+var point = {x:1,y:1};
+"x" in point // true
+"z" in point // false
+"toString" in point // true:对象继承了toString方法
+var data = [7,8,9];
+"0" in data // true：数组包含元素“0”
+1 in data // true：数字转换为字符串
+3 in data // false：没有索引为3的元素
+```
+  #### instanceof 运算符
+  > instanceof运算符希望左操作数是一个对象，右操作数标识对象的类。如果左侧的对象是右侧类的实例，则表达式返回true，否则返回false。JavaScript中对象的类是通过初始化它们的构造函数来定义的。这样的话，instanceof的右操作数应当是一个函数。
+```
+var d = new Date();
+d instanceof Date; // true
+d instanceof Onject; // true
+d instanceof Number; // false
+var a = [1,2,3];
+a instanceof Array; // true
+a instanceof Object; // true
+a instanceof RegExp; // false
+```
+  如果instanceof的左操作数不是对象的话，instanceof返回false。如果右操作数不是函数，则抛出一个类型错误异常。
+  > 为了计算表达式o instanceof f，JavaScript首先计算f.prototype，然后在原型链中查找o，如果找到，那么o是f（或者f的父类）的一个实例，表达式返回true。如果f.prototype不在o的原型链中的话，那么o就不是f的实例，instanceof返回false。
